implement: /users(Admin) API
