# src/Controllers/RegisterCtl.php
@@ -5,6 +5,7 @@ namespace DUVX\Controllers;
 use DunnServer\MVC\Controller;
 use DunnServer\Utils\DunnArray;
 use DUVX\Exceptions\AuthException;
+use DUVX\Models\AuthModel;
 use DUVX\Models\HttpPayload;
 use DUVX\Models\UserModel;
 
@@ -17,21 +18,18 @@ class RegisterCtl extends Controller
     $avatar = $uploads->get('avatar', new DunnArray())->get(0); // [File]
     $user = UserModel::builder()->fromBody($body)->isAdmin(false)->uuid(uniqid())->avatar($avatar ? $avatar->getPath() : null)->build();
     try {
-      $errors = new DunnArray(...$user->validate());
-      if ($errors->length() > 0) {
-        $mess = $errors->join(', ');
-        throw new AuthException($mess, 400);
-      } else {
-        if ($user->has())
-          throw new AuthException('Username or email already exists!', 500);
-        $user = $user->save();
-        $payload = HttpPayload::success($user, 'Register successfully!');
-      }
-    } catch (AuthException $th) {
-      $payload = HttpPayload::failed($th);
+      $userAuth = new AuthModel($user);
+      $user = $userAuth->register();
+      $payload = HttpPayload::success($user, 'Register successfully!');
+    } catch (AuthException $e) {
+      $payload = HttpPayload::failed($e);
       $res->status($payload->getCode());
-      if ($avatar)
+      if ($avatar) {
+        $root = $req->server('DOCUMENT_ROOT');
+        $avatar->setPath($root . $avatar->getPath());
         $avatar->remove();
+      }
+      ;
     }
     $res->send($payload);
   }
